# build

./: config.ini  envsetup.sh  envsetup.sh.fish
core/: EFIDroidUEFIApps.dsc  buildlib.py  compilescript_inc.mk  compilescript_inc.py  compilescript_inc.sh  configure.py  fstab.py  lk_inc.mk  lk_inc_post.mk  main.mk  make_syntax.py  toolchain.cmake  utils.py
core/tasks/: edk2-appbase.sh  edk2-basetools.sh  edk2-common.sh  edk2.ini  edk2.mk  edk2.sh  edk2n.ini  edk2n.sh  efidroid_defconfig  fastbootwrapper.ini  fastbootwrapper.sh  lk.ini  lk.mk  lk.sh  lkl.ini  lkl.sh  ota.ini  ota.sh  selinux.ini  selinux.sh  selinuxtools.ini  selinuxtools.sh  target.txt  uboot.ini  uboot.sh
moduleconfigs/busybox/: EFIDroid.ini  busybox.sh
moduleconfigs/dtc/: EFIDroid.ini  dtc.sh  dtc_host.sh  dtc_target.sh
moduleconfigs/e2fsprogs/: EFIDroid.ini  libmke2fs.sh
moduleconfigs/f2fs-tools/: EFIDroid.ini
moduleconfigs/inih/: CMakeLists.txt  EFIDroid.ini
moduleconfigs/libfuse/: EFIDroid.ini
moduleconfigs/libselinux/: CMakeLists.txt  EFIDroid.ini
moduleconfigs/loki/: EFIDroid.ini  loki.sh
moduleconfigs/parted/: EFIDroid.ini  fixbuild.sh
moduleconfigs/pcre/: CMakeLists.txt  EFIDroid.ini
moduleconfigs/selinux/: EFIDroid.ini  selinux.sh
moduleconfigs/tracy/: CMakeLists.txt  EFIDroid.ini  gen_syscall_header
moduleconfigs/util-linux/: EFIDroid.ini
templates/: EFIDroidUEFIApps.dsc
tools/: audit2callow  create_device  create_efidroid_metadata  diffatags  dtb_decompall  dump_efidroid_metadata  edk2_update  fastboot_filter_log  fastbootwrapper  finalize_device  generate_build_env  getmissingcommits  guidgen  headers_install  lns  makedtb_rec  makeforward.c  makeforward_pipes.c  mkbootimg  mkefibootimg  publish_release  python  qaep  roomservice.py  runscript  start_local_otaserver  unpackbootimg
uefiappconfigs/grub/: EFIDroid.ini  grub.cfg  grub.sh  load.cfg
uefiappconfigs/refind/: EFIDroid.ini  inc.mk  refind.patch  refind.sh
